--- a/airbyte.env
+++ b/airbyte.env
@@ -10,7 +10,7 @@
 
 
 ### SHARED ###
-VERSION=0.40.17
+VERSION=0.40.18
 
 # When using the airbyte-db via default docker image
 CONFIG_ROOT=/data
@@ -57,6 +57,7 @@ CONFIGS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION=0.35.15.001
 ### AIRBYTE SERVICES ###
 TEMPORAL_HOST=airbyte-temporal:7233
 INTERNAL_API_HOST=airbyte-server:8001
+#CONNECTOR_BUILDER_API_HOST=airbyte-connector-builder-server:80 #FIXME: Uncomment this when enabling the connector-builder
 WEBAPP_URL=http://localhost:8000/
 # Although not present as an env var, required for webapp configuration.
 API_URL=/api/v1/
