--- a/airbyte.env
+++ b/airbyte.env
@@ -10,7 +10,7 @@
 
 
 ### SHARED ###
-VERSION=0.40.18
+VERSION=0.40.23
 
 # When using the airbyte-db via default docker image
 CONFIG_ROOT=/data
@@ -57,10 +57,11 @@ CONFIGS_DATABASE_MINIMUM_FLYWAY_MIGRATION_VERSION=0.35.15.001
 ### AIRBYTE SERVICES ###
 TEMPORAL_HOST=airbyte-temporal:7233
 INTERNAL_API_HOST=airbyte-server:8001
-#CONNECTOR_BUILDER_API_HOST=airbyte-connector-builder-server:80 #FIXME: Uncomment this when enabling the connector-builder
+CONNECTOR_BUILDER_API_HOST=airbyte-connector-builder-server:80
 WEBAPP_URL=http://localhost:8000/
 # Although not present as an env var, required for webapp configuration.
 API_URL=/api/v1/
+CONNECTOR_BUILDER_API_URL=/connector-builder-api
 
 ### JOBS ###
 # Relevant to scaling.
@@ -93,6 +94,8 @@ MAX_SYNC_WORKERS=5
 MAX_SPEC_WORKERS=5
 MAX_CHECK_WORKERS=5
 MAX_DISCOVER_WORKERS=5
+MAX_NOTIFY_WORKERS=5
+SHOULD_RUN_NOTIFY_WORKFLOWS=false
 # Temporal Activity configuration
 ACTIVITY_MAX_ATTEMPT=
 ACTIVITY_INITIAL_DELAY_BETWEEN_ATTEMPTS_SECONDS=
@@ -110,3 +113,5 @@ METRIC_CLIENT=
 OTEL_COLLECTOR_ENDPOINT="http://host.docker.internal:4317"
 
 USE_STREAM_CAPABLE_STATE=true
+AUTO_DETECT_SCHEMA=false
+
