--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,11 @@ services:
     container_name: postgres-warehouse
     restart: always
     ports:
-      - "5432:5432"
-    env_file:
-      - ./postgres/config/.env-postgres
+      - "${DWH_POSTGRES_PORT}:5432"
+    environment:
+      - POSTGRES_DB: ${DWH_POSTGRES_DB}
+      - POSTGRES_USER: ${DWH_POSTGRES_USER}
+      - POSTGRES_PASSWORD: ${DWH_POSTGRES_PASSWORD}
     volumes:
       - warehouse-volume:/var/lib/postgresql/data
 
@@ -27,9 +29,11 @@ services:
     container_name: metabase-db
     restart: always
     ports:
-      - "5433:5432"
-    env_file:
-      - ./metabase/config/.env-metabase-db
+      - "${MB_DB_PORT}:5432"
+    environment:
+      - POSTGRES_DB: ${MB_DB_NAME}
+      - POSTGRES_USER: ${MB_DB_USER}
+      - POSTGRES_PASSWORD: ${MB_DB_PASSWORD}
     volumes:
       - metabase-db-volume:/var/lib/postgresql/data
 
@@ -38,9 +42,14 @@ services:
     container_name: metabase
     restart: always
     ports:
-      - "3000:3000"
-    env_file:
-      - ./metabase/config/.env-metabase-db
+      - "${MB_PORT}:3000"
+    environment:
+      - MB_DB_TYPE: ${MB_DB_TYPE}
+      - MB_DB_DBNAME: ${MB_DB_DBNAME}
+      - MB_DB_PORT: ${MB_DB_PORT}
+      - MB_DB_USER: ${MB_DB_USER}
+      - MB_DB_PASS: ${MB_DB_PASS}
+      - MB_DB_HOST: ${MB_DB_HOST}
 
 
 volumes:
