--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,9 +8,9 @@ services:
     ports:
       - "${DWH_POSTGRES_PORT}:5432"
     environment:
-      - POSTGRES_DB: ${DWH_POSTGRES_DB}
-      - POSTGRES_USER: ${DWH_POSTGRES_USER}
-      - POSTGRES_PASSWORD: ${DWH_POSTGRES_PASSWORD}
+      - POSTGRES_DB=${DWH_POSTGRES_DB}
+      - POSTGRES_USER=${DWH_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${DWH_POSTGRES_PASSWORD}
     volumes:
       - warehouse-volume:/var/lib/postgresql/data
 
@@ -20,7 +20,7 @@ services:
     volumes:
       - .:/usr/app
       - ./dbt/config/profiles.yml:/root/.dbt/profiles.yml
-    command: [ "init", ${DBT_PROJECT_NAME} ]
+    command: init ${DBT_PROJECT_NAME}
     depends_on:
       - postgres-warehouse
 
@@ -31,9 +31,9 @@ services:
     ports:
       - "${MB_DB_PORT}:5432"
     environment:
-      - POSTGRES_DB: ${MB_DB_NAME}
-      - POSTGRES_USER: ${MB_DB_USER}
-      - POSTGRES_PASSWORD: ${MB_DB_PASSWORD}
+      - POSTGRES_DB=${MB_DB_NAME}
+      - POSTGRES_USER=${MB_DB_USER}
+      - POSTGRES_PASSWORD=${MB_DB_PASSWORD}
     volumes:
       - metabase-db-volume:/var/lib/postgresql/data
 
@@ -44,12 +44,12 @@ services:
     ports:
       - "${MB_PORT}:3000"
     environment:
-      - MB_DB_TYPE: postgres
-      - MB_DB_DBNAME: ${MB_DB_NAME}
-      - MB_DB_PORT: ${MB_DB_PORT}
-      - MB_DB_USER: ${MB_DB_USER}
-      - MB_DB_PASS: ${MB_DB_PASSWORD}
-      - MB_DB_HOST: ${MB_DB_HOST}
+      - MB_DB_TYPE=postgres
+      - MB_DB_DBNAME=${MB_DB_NAME}
+      - MB_DB_PORT=${MB_DB_PORT}
+      - MB_DB_USER=${MB_DB_USER}
+      - MB_DB_PASS=${MB_DB_PASSWORD}
+      - MB_DB_HOST=${MB_DB_HOST}
 
 
 volumes:
