Fix metabase-db port, add compose down to Makefile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
     environment:
       - MB_DB_TYPE=postgres
       - MB_DB_DBNAME=${MB_DB_NAME}
-      - MB_DB_PORT=${MB_DB_PORT}
+      - MB_DB_PORT=5432
       - MB_DB_USER=${MB_DB_USER}
       - MB_DB_PASS=${MB_DB_PASSWORD}
       - MB_DB_HOST=${MB_DB_HOST}
